--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,117 +6,218 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>605</width>
-    <height>481</height>
+    <width>919</width>
+    <height>594</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QLabel" name="lblTemp">
+   <widget class="QGroupBox" name="groupBox">
     <property name="geometry">
      <rect>
-      <x>40</x>
-      <y>100</y>
-      <width>231</width>
-      <height>71</height>
-     </rect>
-    </property>
-    <property name="frameShape">
-     <enum>QFrame::WinPanel</enum>
-    </property>
-    <property name="frameShadow">
-     <enum>QFrame::Sunken</enum>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-   </widget>
-   <widget class="QComboBox" name="portList">
-    <property name="geometry">
-     <rect>
-      <x>20</x>
+      <x>500</x>
       <y>20</y>
-      <width>141</width>
-      <height>21</height>
+      <width>341</width>
+      <height>171</height>
      </rect>
     </property>
+    <property name="title">
+     <string>参数设置</string>
+    </property>
+    <widget class="QPushButton" name="btnSetTemp">
+     <property name="geometry">
+      <rect>
+       <x>110</x>
+       <y>110</y>
+       <width>111</width>
+       <height>24</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>下发设置</string>
+     </property>
+    </widget>
+    <widget class="QWidget" name="">
+     <property name="geometry">
+      <rect>
+       <x>50</x>
+       <y>40</y>
+       <width>221</width>
+       <height>41</height>
+      </rect>
+     </property>
+     <layout class="QHBoxLayout" name="horizontalLayout_2">
+      <item>
+       <widget class="QLabel" name="label">
+        <property name="text">
+         <string>目标温度：</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QDoubleSpinBox" name="targetTemp"/>
+      </item>
+     </layout>
+    </widget>
    </widget>
-   <widget class="QPushButton" name="btnClose">
+   <widget class="QGroupBox" name="groupBox_2">
     <property name="geometry">
      <rect>
-      <x>130</x>
-      <y>60</y>
-      <width>75</width>
-      <height>24</height>
+      <x>10</x>
+      <y>10</y>
+      <width>391</width>
+      <height>171</height>
      </rect>
     </property>
-    <property name="text">
-     <string>关闭串口</string>
+    <property name="title">
+     <string>通信设置</string>
     </property>
+    <widget class="QWidget" name="">
+     <property name="geometry">
+      <rect>
+       <x>20</x>
+       <y>30</y>
+       <width>231</width>
+       <height>91</height>
+      </rect>
+     </property>
+     <layout class="QVBoxLayout" name="verticalLayout">
+      <item>
+       <widget class="QComboBox" name="portList"/>
+      </item>
+      <item>
+       <widget class="QLabel" name="lblStatus">
+        <property name="frameShape">
+         <enum>QFrame::Panel</enum>
+        </property>
+        <property name="text">
+         <string>未连接</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <layout class="QHBoxLayout" name="horizontalLayout">
+        <item>
+         <widget class="QPushButton" name="btnOpen">
+          <property name="text">
+           <string>打开串口</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QPushButton" name="btnClose">
+          <property name="text">
+           <string>关闭串口</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </item>
+     </layout>
+    </widget>
+    <widget class="QComboBox" name="baudRateList">
+     <property name="geometry">
+      <rect>
+       <x>280</x>
+       <y>30</y>
+       <width>67</width>
+       <height>22</height>
+      </rect>
+     </property>
+    </widget>
    </widget>
-   <widget class="QPushButton" name="btnOpen">
+   <widget class="QGroupBox" name="groupBox_3">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>60</y>
-      <width>75</width>
-      <height>24</height>
+      <x>10</x>
+      <y>290</y>
+      <width>461</width>
+      <height>251</height>
      </rect>
     </property>
-    <property name="text">
-     <string>打开串口</string>
+    <property name="title">
+     <string>运行日志</string>
     </property>
+    <widget class="QCheckBox" name="chkHexDisplay">
+     <property name="geometry">
+      <rect>
+       <x>340</x>
+       <y>10</y>
+       <width>91</width>
+       <height>20</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>显示原始Hex</string>
+     </property>
+    </widget>
+    <widget class="QPlainTextEdit" name="txtLog">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>40</y>
+       <width>421</width>
+       <height>191</height>
+      </rect>
+     </property>
+    </widget>
    </widget>
-   <widget class="QLabel" name="lblStatus">
+   <widget class="QGroupBox" name="groupBox_4">
     <property name="geometry">
      <rect>
-      <x>200</x>
-      <y>20</y>
-      <width>91</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="frameShape">
-     <enum>QFrame::Panel</enum>
-    </property>
-    <property name="text">
-     <string>未连接</string>
-    </property>
-   </widget>
-   <widget class="QComboBox" name="baudRateList">
-    <property name="geometry">
-     <rect>
-      <x>390</x>
-      <y>90</y>
-      <width>67</width>
-      <height>22</height>
-     </rect>
-    </property>
-   </widget>
-   <widget class="QPlainTextEdit" name="txtLog">
-    <property name="geometry">
-     <rect>
-      <x>20</x>
+      <x>10</x>
       <y>190</y>
-      <width>351</width>
-      <height>181</height>
+      <width>381</width>
+      <height>80</height>
      </rect>
     </property>
+    <property name="title">
+     <string>当前温度</string>
+    </property>
+    <widget class="QLabel" name="lblTemp">
+     <property name="geometry">
+      <rect>
+       <x>40</x>
+       <y>30</y>
+       <width>301</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="frameShape">
+      <enum>QFrame::WinPanel</enum>
+     </property>
+     <property name="frameShadow">
+      <enum>QFrame::Sunken</enum>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
    </widget>
-   <widget class="QPushButton" name="btnSend">
+   <widget class="QGroupBox" name="groupBox_5">
     <property name="geometry">
      <rect>
-      <x>240</x>
-      <y>60</y>
-      <width>75</width>
-      <height>24</height>
+      <x>500</x>
+      <y>290</y>
+      <width>401</width>
+      <height>251</height>
      </rect>
     </property>
-    <property name="text">
-     <string>读取参数</string>
+    <property name="title">
+     <string>温度变化</string>
     </property>
+    <widget class="QCustomPlot" name="plotTemp" native="true">
+     <property name="geometry">
+      <rect>
+       <x>20</x>
+       <y>40</y>
+       <width>351</width>
+       <height>191</height>
+      </rect>
+     </property>
+    </widget>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
@@ -124,13 +225,21 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>605</width>
+     <width>919</width>
      <height>22</height>
     </rect>
    </property>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>QCustomPlot</class>
+   <extends>QWidget</extends>
+   <header>qcustomplot.h</header>
+   <container>1</container>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
